# site

./: .env  .gitignore  Cargo.toml  Config.toml  Dockerfile  README.md  flake.nix  fly.toml
.github/workflows/: ci.yaml
blog/: 3d-printing-openscad-2022-03-28.markdown  bootcamp-ctf-foss-nsbm.markdown.markdown  ejpt-experience.markdown  error-handling-in-go.markdown  escaping-the-static.markdown  firewall-audit-checklist.markdown  gokrazy.markdown  hello-world.markdown  markdown-test.markdown  protos.markdown  recently-registered-domains-phishing-protection.markdown  red2libc.markdown  restoring-old-corolla.markdown  secret-to-hack.markdown  srilanka-airlines-phishing-rat-teardown.markdown  thats-the-ticket-thm.markdown  when-mechanics-ruin-your-car.markdown
lib/markdown_render/: Cargo.toml
lib/markdown_render/src/: lib.rs  syntax_highlighter.rs
lib/site_templates/: Cargo.toml
lib/site_templates/src/: lib.rs
lib/site_types/: Cargo.toml
lib/site_types/src/: lib.rs
lib/termx/: Cargo.toml
lib/termx/src/: lexer.rs  lib.rs
products/: rdr.markdown
src/: lib.rs
src/app/: config.rs  mod.rs
src/handlers/: blog.rs  feed.rs  mod.rs  products.rs
src/post/: frontmatter.rs  mod.rs
src/termx_registry/: web.rs
src/tmpl/: blog.rs  logo.rs  mod.rs
static/: baffle.min.js  macos-download.html  manifest.json  robots.txt  rr.js  script.js
static/css/: controlbar.css  progress-bar.css  styles.css
static/favicon/: README.md  browserconfig.xml  html_code.html  site.webmanifest
templates/: blog_atom.rs.xml  blog_rss.rs.xml
well-known/: security.txt
(+1 files in other folders)
