[package]
name = "site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
color-eyre = "0.6.2"
dotenv = "0.15.0"
log = "0.4.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_dhall = "0.12.1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3.1"
estimated_read_time = "1.0.0"
futures = "0.3"
sitemap = "0.4"

# workspace dependencies
site_types = { path = "./lib/site_types" }
thiserror = "1.0.51"

[dependencies.tower]
version = "0.4"
features = [ "full" ]

[dependencies.tower-http]
version = "0.4"
features = [ "full" ]

[dependencies.maud]
git = "https://github.com/Xe/maud"
rev = "a40596c42c7603cc4610bbeddea04c4bd8b312d9"
features = ["axum"]
